<resources>
    <string name="app_name">盖世付</string>
    <string name="paypwdwindowhint">输入交易密码</string>
    <string name="forgetpaypwd">忘记密码</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lockpwd_error2">与上一次绘制不一致，请重新绘制</string>
    <string name="lockpwd_error1">至少连接4个点，请重新设置</string>
    <string name="lockpwd_twohint">再次绘制解锁图案</string>
    <string name="lockpwd_onehint">绘制解锁图案</string>
    <string name="lockpwd_reset">重设</string>
    <string name="payment_hint">转账给</string>
    <string name="payment_money">付账金额</string>
    <string name="Gsc">Gsc:</string>
    <string name="payment_inputhint">请输入转账金额</string>
    <string name="payment_affpay">确认付款</string>
    <string name="payment_title">付款</string>
    <string name="receipt_hint">向对方收款</string>
    <string name="receipt_savepic">保存图片</string>
    <string name="receipt_history">收款记录</string>
    <string name="wode">我的</string>
    <string name="Gscyue">Gsc余额：</string>
    <string name="head">头像</string>
    <string name="nickname">昵称</string>
    <string name="gender">性别</string>
    <string name="birth">出生日期</string>
    <string name="persion_info">个人信息</string>
    <string name="bill_date">账单明细</string>
    <string name="about_we">关于我们</string>
    <string name="version_up">版本检查</string>
    <string name="sett">设置</string>
    <string name="exit_login">退出登录</string>
    <string name="changepwd">修改登录密码</string>
    <string name="changepaypwd">修改交易密码</string>
    <string name="opengesture">打开手势解锁</string>
    <string name="placeinputphone">请输入您的手机号</string>
    <string name="placeinputpwd">请输入您的密码</string>
    <string name="login">登录</string>
    <string name="clickregister">注册</string>
    <string name="forgetpwd">忘记密码</string>
    <string name="close">取消</string>
    <string name="aff">确定</string>
    <string name="phone">手机号</string>
    <string name="getAuth">获取验证码</string>
    <string name="auth">验证码</string>
    <string name="pwd">密码</string>
    <string name="placeinputauth">请输入您的验证码</string>
    <string name="registerhint">密码长度至少8个字符，不可为纯英文或纯数字</string>
    <string name="affpwd">确认密码</string>
    <string name="paypwd">交易密码</string>
    <string name="affpaypwd">确认交易密码</string>
    <string name="placeinputaffpaypwd">请输入6位确认交易密码</string>
    <string name="placeinputpaypwd">请输入6位交易密码</string>
    <string name="forgetPwd">忘记密码</string>
    <string name="CaptureCodeTitle">二维码识别</string>
    <string name="NoShibie">手动</string>
    <string name="placeinputaddresshint">请手动输入转账地址</string>
    <string name="next">下一步</string>
    <string name="inputAddressTitle">输入地址</string>
    <string name="resultTitel">扫描结果</string>
    <string name="forgetpayPwd">修改支付密码</string>
    <string name="paySuccess">支付成功,</string>
    <string name="selfmotionexit">后自动退出</string>
    <string name="Success">成功</string>
    <string name="address">转账地址：</string>
    <string name="realname">实名认证</string>
    <string name="placeinputinfo">请输入内容</string>
    <string name="about_info"><![CDATA[\t\t盖世付是一款移动端轻钱包 App。旨在为用户提供一款安全放心、简单好用、功能强大的数字资产钱包应用。   \n\n\t【主要功能】\n\n  私钥自持，安全管理数字资产 \n- 私钥被加密后，安全存储在手机的沙盒文件系统里面。\n - 提供多种私钥备份策略，防丢防盗。   \n\n转帐收款，简单好用的轻钱包功能 - 轻钱包无需同步完整区块链数据，轻便快捷。 \n- 足够简单易用，用户熟悉的界面和交互方式。    \n GSC支付场景应用 \n- 线上线下GSC消费一键支付，安全快捷]]></string>
    <string name="saoyisao">扫一扫</string>
    <string name="fukuan">付款</string>
    <string name="shoukuan">收款</string>
    <string name="biprice">币\t\t价：</string>
</resources>
