<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activitys.StartPaymentActivity">
    <include
        layout="@layout/toobal_titleblue"
        />
        <zz.hjzn.hjwallet.weight.CircleImageView
            android:layout_width="@dimen/demen_80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/demen_30dp"
            android:src="@mipmap/icon_head"
            android:id="@+id/iv_head"
            android:layout_height="@dimen/demen_80dp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/demen_10dp"
        android:layout_gravity="center_horizontal"
        >
        <TextView
            style="@style/TextView16black"
            android:text="@string/payment_hint"
            android:layout_gravity="center_horizontal"
            />
        <TextView
            android:id="@+id/tv_name"
            android:text=""
            style="@style/TextView16blue"
            android:layout_gravity="center_horizontal"
            />
        <TextView
            android:id="@+id/tv_name1"
            android:text="()"
            android:layout_marginLeft="@dimen/demen_5dp"
            style="@style/TextView16black"
            android:layout_gravity="center_horizontal"
            />

    </LinearLayout>

        <TextView
            style="@style/TextView16black"
            android:text="@string/payment_money"
            android:layout_marginLeft="@dimen/demen_10dp"
            android:layout_marginTop="@dimen/demen_20dp"
             />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/demen_10dp"
        >

        <TextView
            style="@style/TextView16blue"
            android:text="@string/Gsc"
            />
            <EditText
                android:id="@+id/et_num"
                android:layout_width="match_parent"
                android:layout_height="@dimen/demen_40dp"
                android:background="@null"
                android:inputType="number"
                android:textSize="@dimen/text_dimens13"
                android:hint="@string/payment_inputhint"
                android:layout_marginLeft="@dimen/demen_5dp"
                />
    </LinearLayout>
    <View
        style="@style/haveing"
        android:layout_marginLeft="@dimen/demen_10dp"
        android:layout_marginRight="@dimen/demen_10dp"
        />
        <Button
            android:id="@+id/btn_aff"
            android:layout_width="match_parent"
            android:layout_height="@dimen/demen_40dp"
            android:text="@string/payment_affpay"
            android:layout_marginLeft="@dimen/demen_10dp"
            android:layout_marginRight="@dimen/demen_10dp"
            android:layout_marginTop="@dimen/demen_40dp"
            android:textColor="@color/gary_text"
            android:background="@drawable/shape_payment_affgary"
            />

</LinearLayout>