<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activitys.RegisterActivity">
    <include
        layout="@layout/toobal_titleblack"
        />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/demen_10dp"
            >
            <ImageView
               android:layout_width="@dimen/demen_25dp"
                android:layout_height="@dimen/demen_25dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/icon_phone"
                />
                <EditText
                    android:id="@+id/et_phone"
                    android:maxLength="11"
                    android:lines="1"
                    android:layout_marginLeft="@dimen/demen_20dp"
                    android:layout_width="wrap_content"
                    android:layout_weight="5"
                    android:inputType="phone"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/demen_5dp"
                    android:background="@null"

                    android:textSize="@dimen/text_dimens13"
                    android:hint="@string/placeinputphone"
                    />
        </LinearLayout>
    <View
        style="@style/haveing"
        android:layout_marginLeft="@dimen/demen_10dp"
        android:layout_marginRight="@dimen/demen_10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/demen_10dp"
        >
        <ImageView
            android:layout_width="@dimen/demen_25dp"
            android:layout_height="@dimen/demen_25dp"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/icon_auth"
            />
        <EditText
            android:id="@+id/et_authcode"
            android:layout_width="wrap_content"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:padding="@dimen/demen_5dp"
            android:lines="1"
            android:background="@null"
            android:layout_marginLeft="@dimen/text_dimens20"
            android:textSize="@dimen/text_dimens13"
            android:hint="@string/placeinputauth"
            />
            <Button
                android:id="@+id/btn_getauth"
                android:layout_weight="3"
                android:textSize="@dimen/text_dimens13"
                android:layout_width="wrap_content"
                android:textColor="@color/gary_text"
                android:layout_height="@dimen/demen_40dp"
                android:background="@drawable/shape_payment_affgary"
                android:text="@string/getAuth"
                />
    </LinearLayout>
    <View
        style="@style/haveing"
        android:layout_marginLeft="@dimen/demen_10dp"
        android:layout_marginRight="@dimen/demen_10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/demen_10dp"
        >
        <ImageView
            android:layout_width="@dimen/demen_25dp"
            android:layout_height="@dimen/demen_25dp"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/icon_lock"
            />
        <EditText
            android:id="@+id/et_pwd"
            android:inputType="textPassword"
            android:layout_weight="6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/demen_5dp"
            android:lines="1"
            android:background="@null"
            android:layout_marginLeft="@dimen/text_dimens20"
            android:textSize="@dimen/text_dimens13"
            android:hint="@string/placeinputpwd"
            />
    </LinearLayout>
    <View
        style="@style/haveing"
        android:layout_marginLeft="@dimen/demen_10dp"
        android:layout_marginRight="@dimen/demen_10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/demen_10dp"
        >
        <ImageView
            android:layout_width="@dimen/demen_25dp"
            android:layout_height="@dimen/demen_25dp"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/icon_lock"
            />
        <EditText
            android:id="@+id/et_affpwd"
            android:layout_weight="6"
            android:inputType="textPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/demen_5dp"
            android:lines="1"
            android:layout_marginLeft="@dimen/demen_20dp"
            android:background="@null"
            android:textSize="@dimen/text_dimens13"
            android:hint="@string/placeinputpwd"
            />
    </LinearLayout>
    <View
        style="@style/haveing"
        android:layout_marginLeft="@dimen/demen_10dp"
        android:layout_marginRight="@dimen/demen_10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/demen_10dp"
        >
        <ImageView
            android:layout_width="@dimen/demen_25dp"
            android:layout_height="@dimen/demen_25dp"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/icon_lock"
            />
        <EditText
            android:id="@+id/et_paypwd"
            android:layout_weight="6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/demen_5dp"
            android:lines="1"
            android:maxLength="6"
            android:layout_marginLeft="@dimen/demen_20dp"
            android:inputType="numberPassword"
            android:background="@null"
            android:textSize="@dimen/text_dimens13"
            android:hint="@string/placeinputpaypwd"
            />
    </LinearLayout>
    <View
        style="@style/haveing"
        android:layout_marginLeft="@dimen/demen_10dp"
        android:layout_marginRight="@dimen/demen_10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/demen_10dp"
        >
        <ImageView
            android:layout_width="@dimen/demen_25dp"
            android:layout_height="@dimen/demen_25dp"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/icon_lock"
            />
        <EditText
            android:id="@+id/et_affpaypwd"
            android:layout_weight="6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/demen_5dp"
            android:lines="1"
            android:maxLength="6"
            android:layout_marginLeft="@dimen/demen_20dp"
            android:inputType="numberPassword"
            android:background="@null"
            android:textSize="@dimen/text_dimens13"
            android:hint="@string/placeinputaffpaypwd"
            />
    </LinearLayout>
    <View
        style="@style/haveing"
        android:layout_marginLeft="@dimen/demen_10dp"
        android:layout_marginRight="@dimen/demen_10dp"
        />
        <TextView
            style="@style/TextView13black"
            android:padding="@dimen/demen_10dp"
            android:textColor="@color/gary_text"
            android:text="@string/registerhint"
            />

        <Button
            android:id="@+id/btn_aff"
            android:layout_width="match_parent"
            android:layout_height="@dimen/demen_40dp"
            android:layout_marginLeft="@dimen/demen_10dp"
            android:layout_marginRight="@dimen/demen_10dp"
            android:layout_marginTop="@dimen/demen_60dp"
            android:text="@string/aff"
            android:textColor="@color/white"
            android:background="@drawable/shape_payment_affblue"
            />
</LinearLayout>