<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/shape_name_bg"
    android:layout_height="match_parent">
    <TextView
        style="@style/TextView15blue"
        android:id="@+id/tv_title"
        android:padding="@dimen/demen_15dp"
        android:layout_gravity="center_horizontal"
        />
        <View
            style="@style/haveing"
            android:layout_marginRight="@dimen/demen_10dp"
            android:layout_marginTop="@dimen/demen_10dp"
            android:layout_marginLeft="@dimen/demen_10dp"
            />
        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/demen_10dp"
            android:lines="1"
            android:layout_marginLeft="@dimen/demen_30dp"
            android:layout_marginRight="@dimen/demen_30dp"
            android:layout_marginTop="@dimen/demen_10dp"
            android:hint="@string/placeinputinfo"
            android:textSize="@dimen/demen_15dp"
            android:background="@drawable/shape_editext_line"
            android:gravity="center_horizontal"
            />
        <View
            style="@style/haveing"
            android:layout_marginLeft="@dimen/demen_10dp"
            android:layout_marginRight="@dimen/demen_10dp"
            android:layout_marginTop="@dimen/demen_10dp"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/demen_30dp"
            android:layout_marginLeft="@dimen/demen_30dp"
            android:layout_marginRight="@dimen/demen_30dp"
            android:layout_marginTop="@dimen/demen_10dp"
            >
            <Button
                android:id="@+id/btn_close"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/demen_30dp"
                android:text="@string/close"
                android:textColor="@color/white"
                android:background="@drawable/shape_payment_affblue"
                />
            <Button
                android:id="@+id/btn_aff"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/demen_30dp"
                android:text="@string/aff"
                android:layout_alignParentRight="true"
                android:textColor="@color/white"
                android:background="@drawable/shape_payment_affblue"
                />
        </RelativeLayout>
</LinearLayout>