<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/icon_wave"
    tools:context=".activitys.LoginActivity">
        <TextView
            android:layout_width="wrap_content"
           android:layout_marginTop="@dimen/demen_20dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/demen_10dp"
            android:textSize="@dimen/text_dimens16"
            android:textColor="@color/black_text"
            android:text="@string/login"
            android:layout_gravity="center_horizontal"
            />
        <ImageView
            android:layout_width="@dimen/demen_80dp"
            android:layout_height="@dimen/demen_80dp"
            android:layout_marginTop="@dimen/demen_40dp"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/logo"
            />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/demen_60dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/demen_10dp"
            >
            <ImageView
                android:layout_width="@dimen/demen_25dp"
                android:src="@mipmap/icon_phone"
                android:layout_marginLeft="@dimen/demen_10dp"
                android:layout_gravity="center_vertical"
                android:layout_height="@dimen/demen_25dp" />
    <EditText
        android:id="@+id/et_phone"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/demen_40dp"
        android:hint="请输入您的账号"
        android:background="@null"
        android:padding="@dimen/demen_10dp"
        android:layout_gravity="center_vertical"
        android:textSize="@dimen/text_dimens13"
        />
        </LinearLayout>
        <View
            style="@style/haveing"
            android:layout_marginLeft="@dimen/demen_10dp"
            android:layout_marginRight="@dimen/demen_10dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/demen_10dp"
            >
            <ImageView
                android:layout_width="@dimen/demen_25dp"
                android:src="@mipmap/icon_lock"
                android:layout_marginLeft="@dimen/demen_10dp"
                android:layout_gravity="center_vertical"
                android:layout_height="@dimen/demen_25dp" />

    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/demen_40dp"
        android:padding="@dimen/demen_10dp"
        android:hint="@string/placeinputpwd"
        android:inputType="textPassword"
        android:textSize="@dimen/text_dimens13"
        android:background="@null"
        />
        </LinearLayout>
        <View
            style="@style/haveing"
            android:layout_marginLeft="@dimen/demen_10dp"
            android:layout_marginRight="@dimen/demen_10dp"
            />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tv_register"
            style="@style/TextView14black"
            android:padding="@dimen/demen_10dp"
            android:layout_alignParentRight="true"
            android:text="@string/clickregister"
            android:textColor="@color/gary_text"
            />
            <TextView
                android:id="@+id/tv_forgetpwd"
            style="@style/TextView14black"
            android:padding="@dimen/demen_10dp"
            android:text="@string/forgetpwd"
                android:textColor="@color/gary_text"
            />
    </RelativeLayout>
    <Button
        android:id="@+id/btn_aff"
        android:layout_width="match_parent"
        android:layout_height="@dimen/demen_40dp"
        android:text="@string/login"
        android:layout_marginTop="@dimen/demen_40dp"
        android:layout_marginLeft="@dimen/demen_40dp"
        android:layout_marginRight="@dimen/demen_40dp"
        android:textColor="@color/white"
        android:background="@drawable/shape_payment_affblue"
        />
    </LinearLayout>
</LinearLayout>