<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activitys.PersionCenterActivity">
    <include
        layout="@layout/toobal_titleblack"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        >
        <LinearLayout
            android:id="@+id/ll_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/demen_10dp"
            android:orientation="horizontal"
            >
            <TextView
                style="@style/TextView13black"
                android:layout_gravity="center_vertical"
                android:text="@string/head"
                android:layout_weight="1"

                />
            <zz.hjzn.hjwallet.weight.CircleImageView
                android:id="@+id/iv_head"
                android:layout_width="@dimen/demen_40dp"
                android:layout_height="@dimen/demen_40dp"
                android:src="@mipmap/icon_head"
                />
            <ImageView
                android:layout_width="@dimen/demen_15dp"
                android:layout_height="@dimen/demen_15dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/icon_right"
                android:layout_marginLeft="@dimen/demen_20dp"
                />
        </LinearLayout>
    <View
        style="@style/haveing"
        />
    <LinearLayout
        android:id="@+id/ll_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/demen_10dp"
        android:orientation="horizontal"
        >
        <TextView
            style="@style/TextView13black"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black_text"
            android:text="@string/nickname"
            android:layout_weight="1"

            />
        <TextView
            android:id="@+id/tv_nickname"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <ImageView
            android:layout_width="@dimen/demen_15dp"
            android:layout_height="@dimen/demen_15dp"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/icon_right"
            android:layout_marginLeft="@dimen/demen_20dp"
            />
    </LinearLayout>
    <View
        style="@style/haveing"
        />
    <LinearLayout
        android:id="@+id/ll_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/demen_10dp"

        android:orientation="horizontal"
        >
        <TextView
            style="@style/TextView13black"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black_text"
            android:text="@string/realname"
            android:layout_weight="1"

            />
        <TextView
            android:id="@+id/tv_gender"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <ImageView
            android:layout_width="@dimen/demen_15dp"
            android:layout_height="@dimen/demen_15dp"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/icon_right"
            android:layout_marginLeft="@dimen/demen_20dp"
            />
    </LinearLayout>
    <View
        style="@style/haveing"
        />
    <LinearLayout
        android:id="@+id/ll_birth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/demen_10dp"
        android:orientation="horizontal"
        >
        <TextView
            style="@style/TextView13black"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black_text"
            android:text="@string/birth"
            android:layout_weight="1"

            />
        <TextView
            android:id="@+id/tv_birth"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <ImageView
            android:layout_width="@dimen/demen_15dp"
            android:layout_height="@dimen/demen_15dp"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/icon_right"
            android:layout_marginLeft="@dimen/demen_20dp"
            />
    </LinearLayout>
    </LinearLayout>
</LinearLayout>