<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".activitys.SettActivity">
    <include
        layout="@layout/toobal_titleblack"
        />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >
            <LinearLayout
                android:id="@+id/ll_changepwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/demen_10dp"
                android:orientation="horizontal"
                >
                <TextView
                    style="@style/TextView14black"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black_text"
                    android:text="@string/changepwd"
                    android:layout_weight="1"

                    />
                <ImageView
                    android:layout_width="@dimen/demen_15dp"
                    android:layout_height="@dimen/demen_15dp"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/icon_right"
                    android:layout_marginLeft="@dimen/demen_20dp"
                    />
            </LinearLayout>
            <View
                style="@style/haveing"
                android:layout_marginLeft="@dimen/demen_10dp"
                android:layout_marginRight="@dimen/demen_10dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                >
                <LinearLayout
                    android:id="@+id/ll_changepaypwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/demen_10dp"
                    android:orientation="horizontal"
                    >
                    <TextView
                        style="@style/TextView14black"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/black_text"
                        android:text="@string/changepaypwd"
                        android:layout_weight="1"

                        />
                    <ImageView
                        android:layout_width="@dimen/demen_15dp"
                        android:layout_height="@dimen/demen_15dp"
                        android:layout_gravity="center_vertical"
                        android:src="@mipmap/icon_right"
                        android:layout_marginLeft="@dimen/demen_20dp"
                        />
                </LinearLayout>
                <View
                    style="@style/haveing"
                    android:layout_marginLeft="@dimen/demen_10dp"
                    android:layout_marginRight="@dimen/demen_10dp"
                    />
                    <LinearLayout
                        android:visibility="gone"
                        android:id="@+id/ll_opengesture"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/demen_10dp"
                        android:orientation="horizontal"
                        >
                        <TextView
                            style="@style/TextView14black"
                            android:layout_gravity="center_vertical"
                            android:textColor="@color/black_text"
                            android:text="@string/opengesture"
                            android:layout_weight="1"

                            />
                        <ImageView
                            android:id="@+id/iv_swich"
                            android:layout_width="@dimen/demen_35dp"
                            android:layout_height="@dimen/demen_30dp"
                            android:layout_gravity="center_vertical"
                            android:src="@mipmap/icon_shut"
                            android:layout_marginLeft="@dimen/demen_20dp"
                            />
                    </LinearLayout>
        </LinearLayout>
        </LinearLayout>
    <Button
        android:id="@+id/btn_exit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/demen_40dp"
        android:text="@string/exit_login"
        android:textColor="@color/white"
        android:layout_marginBottom="@dimen/demen_30dp"
        android:layout_marginLeft="@dimen/demen_10dp"
        android:layout_marginRight="@dimen/demen_10dp"
        android:background="@drawable/shape_payment_affblue"
        />
</LinearLayout>